# AI-Anime-Recommender

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
Data/: anime_updated.csv
chroma_db/: chroma.sqlite3
config/: config.py
pipeline/: build_pipeline.py
src/: data_loader.py  recommender.py  vector_store.py
utils/: custom_exception.py
